--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
       box-sizing: border-box;
     }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       color: white;
-      min-height: 100vh;
-      position: relative;
-      overflow-x: hidden;
       background: #000;
+      overflow-x: hidden;
+      line-height: 1.6;
     }
 
-    /* Hlavní pozadí s obrázkem */
+    /* Hlavní pozadí s obrázkem pro hero sekci */
     .hero-background {
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       background: url('profile_pic.jpeg') no-repeat center center;
       background-size: cover;
       z-index: -2;
@@ -53,7 +56,7 @@
       left: 0;
       right: 0;
       padding: 20px 40px;
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(0, 0, 0, 0.1);
       backdrop-filter: blur(20px);
       -webkit-backdrop-filter: blur(20px);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
@@ -78,28 +81,57 @@
       animation: fadeInDown 1s ease 0.5s forwards;
     }
 
-    .socials {
+    .nav-links {
       display: flex;
-      gap: 20px;
+      gap: 30px;
+      list-style: none;
       opacity: 0;
       animation: fadeInDown 1s ease 0.7s forwards;
     }
 
-    .socials a {
+    .nav-links a {
       color: white;
-      font-size: 20px;
+      text-decoration: none;
+      font-weight: 400;
       transition: all 0.3s ease;
-      padding: 8px;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.1);
+      position: relative;
+      padding: 5px 0;
     }
 
-    .socials a:hover {
-      background: rgba(255, 255, 255, 0.2);
-      transform: translateY(-2px);
+    .nav-links a:hover {
+      color: #007AFF;
     }
 
-    /* Hlavní hero sekce */
+    .nav-links a::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      bottom: 0;
+      left: 50%;
+      background: #007AFF;
+      transition: all 0.3s ease;
+      transform: translateX(-50%);
+    }
+
+    .nav-links a:hover::after {
+      width: 100%;
+    }
+
+    /* Sekce styling */
+    .section {
+      min-height: 100vh;
+      padding: 100px 0;
+      position: relative;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 40px;
+    }
+
+    /* Hero sekce */
     .hero {
       height: 100vh;
       display: flex;
@@ -114,7 +146,6 @@
     .hero-content {
       max-width: 800px;
       margin: 0 auto;
-      padding: 0 40px;
     }
 
     .hero h1 {
@@ -161,6 +192,8 @@
       transition: all 0.3s ease;
       backdrop-filter: blur(20px);
       min-width: 140px;
+      text-decoration: none;
+      display: inline-block;
     }
 
     .apple-button:hover {
@@ -195,24 +228,237 @@
       color: rgba(255, 255, 255, 0.7);
     }
 
+    /* O mně sekce */
+    .about {
+      background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+      color: white;
+    }
+
+    .about-content {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 60px;
+      align-items: center;
+    }
+
+    .about-image {
+      width: 300px;
+      height: 300px;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+      transition: transform 0.3s ease;
+    }
+
+    .about-image:hover {
+      transform: scale(1.05);
+    }
+
+    .about-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .about-text h2 {
+      font-size: 3rem;
+      margin-bottom: 30px;
+      font-weight: 700;
+    }
+
+    .about-text p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+      opacity: 0.9;
+      line-height: 1.7;
+    }
+
+    /* Automotive sekce */
+    .automotive {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+    }
+
+    .automotive-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 40px;
+      margin-top: 60px;
+    }
+
+    .automotive-card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(20px);
+      border-radius: 20px;
+      padding: 30px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: all 0.3s ease;
+    }
+
+    .automotive-card:hover {
+      transform: translateY(-10px);
+      background: rgba(255, 255, 255, 0.15);
+    }
+
+    .automotive-card i {
+      font-size: 3rem;
+      color: #007AFF;
+      margin-bottom: 20px;
+    }
+
+    .automotive-card h3 {
+      font-size: 1.5rem;
+      margin-bottom: 15px;
+    }
+
+    .automotive-card p {
+      opacity: 0.9;
+      line-height: 1.6;
+    }
+
+    /* Sociální sítě sekce */
+    .social-section {
+      background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+      color: white;
+      text-align: center;
+    }
+
+    .social-grid {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 60px;
+      flex-wrap: wrap;
+    }
+
+    .social-card {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(20px);
+      border-radius: 20px;
+      padding: 40px 30px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      transition: all 0.3s ease;
+      min-width: 200px;
+      text-decoration: none;
+      color: white;
+    }
+
+    .social-card:hover {
+      transform: translateY(-10px) scale(1.05);
+      background: rgba(255, 255, 255, 0.2);
+      color: white;
+    }
+
+    .social-card i {
+      font-size: 3rem;
+      margin-bottom: 20px;
+      display: block;
+    }
+
+    .social-card h3 {
+      font-size: 1.3rem;
+      margin-bottom: 10px;
+    }
+
+    .social-card p {
+      opacity: 0.9;
+      font-size: 0.9rem;
+    }
+
+    /* Kontakt sekce */
+    .contact {
+      background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+      color: white;
+      text-align: center;
+    }
+
+    .contact-form {
+      max-width: 600px;
+      margin: 0 auto;
+      margin-top: 60px;
+    }
+
+    .form-group {
+      margin-bottom: 30px;
+      text-align: left;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: 500;
+    }
+
+    .form-group input,
+    .form-group textarea {
+      width: 100%;
+      padding: 15px 20px;
+      border: none;
+      border-radius: 15px;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(20px);
+      color: white;
+      font-size: 16px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      transition: all 0.3s ease;
+    }
+
+    .form-group input:focus,
+    .form-group textarea:focus {
+      outline: none;
+      background: rgba(255, 255, 255, 0.15);
+      border-color: rgba(255, 255, 255, 0.4);
+    }
+
+    .form-group input::placeholder,
+    .form-group textarea::placeholder {
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    /* Společné styly pro sekce */
+    .section-title {
+      font-size: 3rem;
+      text-align: center;
+      margin-bottom: 60px;
+      font-weight: 700;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.6s ease;
+    }
+
+    .section-title.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .section-content {
+      opacity: 0;
+      transform: translateY(50px);
+      transition: all 0.8s ease;
+    }
+
+    .section-content.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
     /* Footer */
     footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      padding: 20px 40px;
+      background: #000;
+      padding: 40px 0;
       text-align: center;
-      z-index: 1000;
-      opacity: 0;
-      animation: fadeIn 1s ease 1.5s forwards;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    footer p {
+      color: rgba(255, 255, 255, 0.7);
+      font-size: 14px;
     }
 
     footer a {
       color: rgba(255, 255, 255, 0.7);
       text-decoration: none;
-      font-size: 14px;
-      transition: all 0.3s ease;
+      transition: color 0.3s ease;
     }
 
     footer a:hover {
@@ -265,7 +511,11 @@
         padding: 15px 20px;
       }
 
-      .hero-content {
+      .nav-links {
+        gap: 20px;
+      }
+
+      .container {
         padding: 0 20px;
       }
 
@@ -278,78 +528,217 @@
         width: 200px;
       }
 
-      footer {
-        padding: 15px 20px;
+      .about-content {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 40px;
+      }
+
+      .about-image {
+        justify-self: center;
+      }
+
+      .automotive-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .social-grid {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .section-title {
+        font-size: 2.5rem;
       }
     }
 
     @media (max-width: 480px) {
-      .socials {
+      .nav-links {
         gap: 15px;
+        font-size: 14px;
       }
 
-      .socials a {
-        font-size: 18px;
-        padding: 6px;
+      .section-title {
+        font-size: 2rem;
       }
+
+      .about-text h2 {
+        font-size: 2rem;
+      }
+    }
+
+    /* Scroll efekty pro navigaci */
+    nav.scrolled {
+      background: rgba(0, 0, 0, 0.9);
+      border-bottom-color: rgba(255, 255, 255, 0.2);
     }
 
     /* Hover efekt pro pozadí */
     body:hover .hero-background {
       transform: scale(1.02);
     }
-
-    /* Glassmorphism efekt */
-    .glass {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
   </style>
 </head>
 <body>
   <div class="hero-background"></div>
 
-  <nav>
+  <nav id="navbar">
     <div class="nav-content">
-      <a href="#" class="logo-nav">Viktor Tamayo</a>
-      <div class="socials">
-        <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="#" title="YouTube"><i class="fab fa-youtube"></i></a>
-        <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-      </div>
+      <a href="#home" class="logo-nav">Viktor Tamayo</a>
+      <ul class="nav-links">
+        <li><a href="#about">O mně</a></li>
+        <li><a href="#automotive">Automotive</a></li>
+        <li><a href="#social">Sociální sítě</a></li>
+        <li><a href="#contact">Kontakt</a></li>
+      </ul>
     </div>
   </nav>
 
   <main>
-    <section class="hero">
+    <!-- Hero sekce -->
+    <section id="home" class="hero">
       <div class="hero-content">
         <h1>Viktor Tamayo</h1>
         <p class="hero-subtitle">Communication, media & automotive enthusiast</p>
         <div class="hero-buttons">
-          <button class="apple-button">Portfolio</button>
-          <button class="apple-button secondary">Kontakt</button>
+          <a href="#about" class="apple-button">O mně</a>
+          <a href="#contact" class="apple-button secondary">Kontakt</a>
         </div>
       </div>
       <div class="scroll-indicator">
         <i class="fas fa-chevron-down"></i>
       </div>
     </section>
+
+    <!-- O mně sekce -->
+    <section id="about" class="section about">
+      <div class="container">
+        <h2 class="section-title">O mně</h2>
+        <div class="section-content about-content">
+          <div class="about-image">
+            <img src="vt.jpeg" alt="Viktor Tamayo">
+          </div>
+          <div class="about-text">
+            <h3>Viktor Tamayo</h3>
+            <p>Jsem komunikační profesionál s více než 15 lety zkušeností v médiích, PR, marketingu a sponzoringu.</p>
+            <p>Mohu nabídnout zkušenosti s multimediální tvorbou, moderováním, prezentováním, přípravou komunikačních a marketingových kampaní, organizací eventů a s vedením týmů v mezinárodních projektech.</p>
+            <p>Největší radost mám, když je za mnou odvedená práce vidět.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Automotive sekce -->
+    <section id="automotive" class="section automotive">
+      <div class="container">
+        <h2 class="section-title">Automotive</h2>
+        <div class="section-content">
+          <div class="automotive-grid">
+            <div class="automotive-card">
+              <i class="fas fa-car"></i>
+              <h3>Automotive žurnalistika</h3>
+              <p>Recenze, testy a novinky ze světa automobilů. Specializuji se na nejnovější trendy a technologie v automotive průmyslu.</p>
+            </div>
+            <div class="automotive-card">
+              <i class="fas fa-video"></i>
+              <h3>Video obsah</h3>
+              <p>Tvorba zajímavého video obsahu zaměřeného na automotive témata, od testů vozidel po automotive lifestyle.</p>
+            </div>
+            <div class="automotive-card">
+              <i class="fas fa-users"></i>
+              <h3>Community building</h3>
+              <p>Budování a správa automotive komunit, organizace setkání a eventů pro nadšence automobilů.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sociální sítě sekce -->
+    <section id="social" class="section social-section">
+      <div class="container">
+        <h2 class="section-title">Sociální sítě</h2>
+        <div class="section-content">
+          <p style="font-size: 1.2rem; margin-bottom: 20px; opacity: 0.9;">Sledujte mě na sociálních sítích</p>
+          <div class="social-grid">
+            <a href="#" class="social-card">
+              <i class="fab fa-linkedin"></i>
+              <h3>LinkedIn</h3>
+              <p>Profesní síťování a business obsah</p>
+            </a>
+            <a href="#" class="social-card">
+              <i class="fab fa-youtube"></i>
+              <h3>YouTube</h3>
+              <p>Video obsah o automotive a lifestyle</p>
+            </a>
+            <a href="#" class="social-card">
+              <i class="fab fa-instagram"></i>
+              <h3>Instagram</h3>
+              <p>Zákulisní momenty a automotive fotografie</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Kontakt sekce -->
+    <section id="contact" class="section contact">
+      <div class="container">
+        <h2 class="section-title">Kontakt</h2>
+        <div class="section-content">
+          <p style="font-size: 1.2rem; margin-bottom: 40px; opacity: 0.9;">Máte projekt nebo nápad? Napište mi!</p>
+          <form class="contact-form">
+            <div class="form-group">
+              <label for="name">Jméno</label>
+              <input type="text" id="name" name="name" placeholder="Vaše jméno" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" placeholder="vas@email.cz" required>
+            </div>
+            <div class="form-group">
+              <label for="subject">Předmět</label>
+              <input type="text" id="subject" name="subject" placeholder="O čem chcete mluvit?">
+            </div>
+            <div class="form-group">
+              <label for="message">Zpráva</label>
+              <textarea id="message" name="message" rows="5" placeholder="Vaše zpráva..." required></textarea>
+            </div>
+            <button type="submit" class="apple-button" style="margin-top: 20px;">Odeslat zprávu</button>
+          </form>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p><a href="#">© 2025 Viktor Tamayo. Všechna práva vyhrazena.</a></p>
+    <div class="container">
+      <p>&copy; 2025 Viktor Tamayo. Všechna práva vyhrazena.</p>
+    </div>
   </footer>
 
   <script>
-    // Plynulý scroll efekt pro navigaci
-    document.addEventListener('scroll', function() {
-      const nav = document.querySelector('nav');
+    // Smooth scroll pro navigaci
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+          target.scrollIntoView({
+            behavior: 'smooth',
+            block: 'start'
+          });
+        }
+      });
+    });
+
+    // Scroll efekty pro navigaci
+    window.addEventListener('scroll', function() {
+      const nav = document.getElementById('navbar');
       if (window.scrollY > 50) {
-        nav.style.background = 'rgba(0, 0, 0, 0.8)';
+        nav.classList.add('scrolled');
       } else {
-        nav.style.background = 'rgba(255, 255, 255, 0.1)';
+        nav.classList.remove('scrolled');
       }
     });
 
@@ -361,13 +750,54 @@
       background.style.transform = `translate(${x}px, ${y}px) scale(1.02)`;
     });
 
-    // Klik na tlačítka
-    document.querySelectorAll('.apple-button').forEach(button => {
-      button.addEventListener('click', function() {
-        // Zde můžete přidat funkcionalitu pro tlačítka
-        console.log('Kliknuto na:', this.textContent);
+    // Animace při scrollování
+    const observerOptions = {
+      threshold: 0.1,
+      rootMargin: '0px 0px -50px 0px'
+    };
+
+    const observer = new IntersectionObserver(function(entries) {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+        }
       });
+    }, observerOptions);
+
+    // Sledování všech sekcí pro animace
+    document.querySelectorAll('.section-title, .section-content').forEach(el => {
+      observer.observe(el);
     });
+
+    // Kontaktní formulář
+    document.querySelector('.contact-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      alert('Zpráva byla odeslána! (Demo verze)');
+    });
+
+    // Aktivní sekce v navigaci
+    function updateActiveNav() {
+      const sections = document.querySelectorAll('.section, .hero');
+      const navLinks = document.querySelectorAll('.nav-links a');
+      
+      let current = '';
+      sections.forEach(section => {
+        const sectionTop = section.offsetTop;
+        const sectionHeight = section.clientHeight;
+        if (scrollY >= (sectionTop - 200)) {
+          current = section.getAttribute('id');
+        }
+      });
+
+      navLinks.forEach(link => {
+        link.classList.remove('active');
+        if (link.getAttribute('href') === '#' + current) {
+          link.classList.add('active');
+        }
+      });
+    }
+
+    window.addEventListener('scroll', updateActiveNav);
   </script>
 </body>
 </html>
