--- a/index.html
+++ b/index.html
@@ -274,7 +274,98 @@
       line-height: 1.7;
     }
 
-    /* Automotive sekce */
+    /* Zkušenosti sekce */
+    .experience {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+    }
+
+    .experience-content {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      gap: 60px;
+      align-items: center;
+    }
+
+    .timeline {
+      position: relative;
+    }
+
+    .timeline::before {
+      content: '';
+      position: absolute;
+      left: 120px;
+      top: 0;
+      height: 100%;
+      width: 3px;
+      background: linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0.3));
+      border-radius: 2px;
+    }
+
+    .timeline-item {
+      display: flex;
+      margin-bottom: 40px;
+      position: relative;
+      align-items: flex-start;
+    }
+
+    .timeline-item::before {
+      content: '';
+      position: absolute;
+      left: 109px;
+      top: 8px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: linear-gradient(135deg, #007AFF, #0056CC);
+      border: 4px solid white;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    .timeline-year {
+      min-width: 100px;
+      font-weight: 600;
+      font-size: 0.9rem;
+      color: rgba(255, 255, 255, 0.8);
+      margin-right: 40px;
+      text-align: right;
+      padding-top: 5px;
+    }
+
+    .timeline-content h3 {
+      font-size: 1.4rem;
+      font-weight: 700;
+      margin-bottom: 8px;
+      color: white;
+    }
+
+    .timeline-content p {
+      color: rgba(255, 255, 255, 0.9);
+      line-height: 1.5;
+      font-size: 1rem;
+    }
+
+    .experience-image {
+      width: 100%;
+      max-width: 400px;
+      height: 280px;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+      transition: transform 0.3s ease;
+      justify-self: end;
+    }
+
+    .experience-image:hover {
+      transform: scale(1.05);
+    }
+
+    .experience-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+    }
     .automotive {
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: white;
@@ -535,8 +626,29 @@
         gap: 40px;
       }
 
-      .about-image {
+      .experience-content {
+        grid-template-columns: 1fr;
+        text-align: left;
+        gap: 40px;
+      }
+
+      .experience-image {
         justify-self: center;
+        order: -1;
+      }
+
+      .timeline::before {
+        left: 80px;
+      }
+
+      .timeline-item::before {
+        left: 69px;
+      }
+
+      .timeline-year {
+        min-width: 60px;
+        margin-right: 25px;
+        font-size: 0.8rem;
       }
 
       .automotive-grid {
@@ -588,6 +700,7 @@
       <a href="#home" class="logo-nav">Viktor Tamayo</a>
       <ul class="nav-links">
         <li><a href="#about">O mně</a></li>
+        <li><a href="#experience">Zkušenosti</a></li>
         <li><a href="#automotive">Automotive</a></li>
         <li><a href="#social">Sociální sítě</a></li>
         <li><a href="#contact">Kontakt</a></li>
@@ -603,7 +716,7 @@
         <p class="hero-subtitle">Communication, media & automotive enthusiast</p>
         <div class="hero-buttons">
           <a href="#about" class="apple-button">O mně</a>
-          <a href="#contact" class="apple-button secondary">Kontakt</a>
+          <a href="#experience" class="apple-button secondary">Zkušenosti</a>
         </div>
       </div>
       <div class="scroll-indicator">
@@ -624,6 +737,50 @@
             <p>Jsem komunikační profesionál s více než 15 lety zkušeností v médiích, PR, marketingu a sponzoringu.</p>
             <p>Mohu nabídnout zkušenosti s multimediální tvorbou, moderováním, prezentováním, přípravou komunikačních a marketingových kampaní, organizací eventů a s vedením týmů v mezinárodních projektech.</p>
             <p>Největší radost mám, když je za mnou odvedená práce vidět.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Zkušenosti sekce -->
+    <section id="experience" class="section experience">
+      <div class="container">
+        <h2 class="section-title">Zkušenosti</h2>
+        <div class="section-content experience-content">
+          <div class="experience-text">
+            <div class="timeline">
+              <div class="timeline-item">
+                <div class="timeline-year">2005 - 2017</div>
+                <div class="timeline-content">
+                  <h3>Česká televize</h3>
+                  <p>Redaktor, reportér a komentátor</p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-year">2017 - 2022</div>
+                <div class="timeline-content">
+                  <h3>Scania</h3>
+                  <p>Koordinátor komunikace a PR</p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-year">2022 - 2024</div>
+                <div class="timeline-content">
+                  <h3>UNIQA</h3>
+                  <p>Specialista sponzoringu</p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-year">2024 - současnost</div>
+                <div class="timeline-content">
+                  <h3>Survivor</h3>
+                  <p>Storyteller & reportér</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="experience-image">
+            <img src="vt.jpeg" alt="Viktor Tamayo - Práce">
           </div>
         </div>
       </div>
